Added animation for launch screen before home screen

--- a/WeatherApp/LaunchScreen.storyboard
+++ b/WeatherApp/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,17 +15,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="dEZ-O3-S3v">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="Q6U-3D-aq2">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="dEZ-O3-S3v">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="802"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Q6U-3D-aq2" secondAttribute="bottom" id="805-xk-X6d"/>
                             <constraint firstItem="dEZ-O3-S3v" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="9zA-gb-073"/>
                             <constraint firstItem="dEZ-O3-S3v" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="HAs-uj-OkR"/>
-                            <constraint firstAttribute="bottom" secondItem="dEZ-O3-S3v" secondAttribute="bottom" id="Mks-Hv-WJc"/>
+                            <constraint firstItem="Q6U-3D-aq2" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Ji0-UD-yHf"/>
+                            <constraint firstAttribute="bottom" secondItem="dEZ-O3-S3v" secondAttribute="bottom" constant="50" id="Mks-Hv-WJc"/>
                             <constraint firstItem="dEZ-O3-S3v" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="ea0-MH-L8E"/>
+                            <constraint firstItem="Q6U-3D-aq2" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="ela-1F-vEi"/>
+                            <constraint firstItem="Q6U-3D-aq2" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="n6k-bK-23H"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -35,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchbg" width="1206" height="2398"/>
+        <image name="launchscreenBG" width="1206" height="2398"/>
     </resources>
 </document>
